hphp/test/zend/good/ext/date/tests/002.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!@putenv("TZ=EST5") || getenv("TZ") != 'EST5') {
  exit("skip unable to change TZ enviroment variable\n");
}
}
