hphp/test/zend/bad/ext/date/tests/bug26320.php.skipif
if (!@putenv("TZ=GMT0") || getenv("TZ") != 'GMT0') {
	die("skip unable to change TZ enviroment variable\n");
}